edit projects.html, css, add js

--- a/contact.html
+++ b/contact.html
@@ -48,21 +48,34 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Work">Projects</a>
+              <a class="nav-link" href="projects.html" title="About REDSKY Work">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
+              <a class="nav-link" href="about.html" title="About REDSKY"
+                >About REDSKY</a
+              >
             </li>
-            <li class="nav-item">
+             <li class="nav-item">
               <a class="nav-link" href="mats.html" title="About Mats"
                 >About Mats</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
+              <a
+                class="nav-link"
+                href="contact.html"
+                title="About Contact Information"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -91,7 +104,7 @@
         </div>
       </div>
     <footer>
-      <div class="social-media-contact">
+      <div class="social-media-section">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
