--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html" title="About REDSKY Projects"
-                >Projects</a
-              >
+              <a class="nav-link" href="projects.html" title="About REDSKY Work">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html" title="About REDSKY"
@@ -98,7 +96,7 @@
     </nav>
     <div>
     <footer>
-      <div class="social-media-home-index">
+      <div class="social-media-section">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
