--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="javascript/index.html"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -45,7 +46,7 @@
     <title>Work Projects by REDSKY</title>
   </head>
   <body class="projects-background">
-    <nav class="navbar navbar-expand-lg" style="background-color: #000000">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button
@@ -227,7 +228,7 @@
       </div>
     </div>
     <footer>
-      <div class="social-media-work">
+      <div class="social-media-section">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
@@ -241,20 +242,24 @@
             <i class="fa-brands fa-2x fa-instagram"></i>
           </a>
           <a
-            href="https://www.linkedin.com/in/redsky/"
+            href="https://www.linkedin.com/in/mats-bj%C3%B8rseth-37667313b/"
             target="_blank"
             title="REDSKY LinkedIn"
           >
             <i class="fa-brands fa-2x fa-linkedin"></i>
           </a>
-          <a href="" target="_blank" title="REDSKY X">
+          <a href="https://x.com/MatsMekker1" target="_blank" title="REDSKY X">
             <i class="fa-brands fa-2x fa-x-twitter"></i>
           </a>
-          <a href="" target="_blank" title="Redsky Facebook">
+          <a href="" target="_blank" title="REDSKY Facebook">
             <i class="fa-brands fa-2x fa-facebook-f"></i>
+          </a>
+          <a href="https://www.imdb.com/activity/editprofile/?ref_=up_hd_edt" target="_blank" title="REDSKY Imdb">
+            <i class="fa-brands fa-2x fa-imdb"></i>
           </a>
         </div>
       </div>
+      <button onclick="topFunction()" id="backToTopBtn" title="Go to top">Back to Top 🔼</button>
     </footer>
   </body>
 </html>
