--- a/about.html
+++ b/about.html
@@ -14,7 +14,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/styles.css">
-    <link rel="stylesheet" href="styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -81,7 +80,7 @@
       </p>
       </div>
       <footer>
-      <div class="social-media-about">
+      <div class="social-media-section">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
         </div>
