--- a/mats.html
+++ b/mats.html
@@ -46,8 +46,8 @@
         Mats Mekker Bjørseth is a Norwegian writer and director specializing in dark, character-driven psychological thrillers. His work explores the hidden darkness beneath suburban tranquility, the complexities of trauma, and the unsettling nature of truth. With a focus on atmospheric tension and intelligent, high-concept storytelling, he crafts narratives designed to challenge and linger long after the credits roll.
       </p>
     </div>
-    <div class="pt-5 ps-5">
-    <a href="../index.html">Back to Homepage</a>
+    <div class="pt-2 ps-5">
+    <a href="../index.html" class="back-to-homepage">Back to Homepage</a>
     </div>
   </body>
 </html>
