--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="javascript/index.html"></script>
     <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -81,17 +82,19 @@
         </div>
       </div>
     </nav>
-    <div class="contact-container container justify-content-center">
+    <div class="contact-container justify-content-center">
         <div class="contact-content mt-4">
         <h1 class="work-projects">
         <img src="images/about.png" alt="REDSKY Logo" width="250" />
       </h1>
-      <div class="contact-info mt-5 mb-5">
-      <p class="email-contact">Email contact</p>
-      <p class="ceo-contact"><a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
-      <p class="telephone-contact">Telephone number</p>
-      <p class="ceo-number">TBA</p> 
-      <p class="address">Our address</p>
+      <div class="contact-info mb-5">
+        <span class="contact-info">
+          <br>Email contact
+          <br><a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a>
+          <br>Contact number
+          <br><a href="tel:+4795205161" class="call-us"><i class="fa-solid fa-phone"></i> +47 95 20 51 61</a>
+          <br>Our addresses
+        </span>
       </div>
       <div class="map-office">
         <p class="map-spain-office"> <strong>Spain</strong></p>
@@ -135,6 +138,7 @@
           </a>
         </div>
       </div>
+      <button onclick="topFunction()" id="backToTopBtn" title="Go to top">Back to Top 🔼</button>
     </footer>
   </body>
 </html>
