--- a/about.html
+++ b/about.html
@@ -76,14 +76,14 @@
       <p class="redsky-description">
         REDSKY stands at the forefront of modern film-making, delivering stories with real impact through sharp creative direction. Each project reflects our commitment to redefining cinematic storytelling.
         </br>We work with respected actors, writers, photographers, audio engineers, and partners across Norway, Spain, Sweden, the UK, and the US. From script to screen, audition to casting, REDSKY handles every step of production with care and control.
-        </br>REDSKY is the film company Mats Mekker Bjørseth started in 2020.
+      </p>
+      <br>
+      <p class="redsky-description">
+        REDSKY is the film company Mats Mekker Bjørseth started in 2020.
       </p>
       </div>
       <footer>
       <div class="social-media-section">
-        <div>
-          <p class="follow-us" title="Follow us">Follow us</p>
-        </div>
         <div class="d-flex justify-content-center">
           <a
             href="https://www.instagram.com/redsky.no/"
