--- a/mats.html
+++ b/mats.html
@@ -46,7 +46,7 @@
         Mats Mekker Bjørseth is a Norwegian writer and director specializing in dark, character-driven psychological thrillers. His work explores the hidden darkness beneath suburban tranquility, the complexities of trauma, and the unsettling nature of truth. With a focus on atmospheric tension and intelligent, high-concept storytelling, he crafts narratives designed to challenge and linger long after the credits roll.
       </p>
          <div class="back-to-homepage">
-          <a href="../index.html" class="position-absolute bottom-0 start-50 translate-middle-x">Back to Homepage</a>
+          <a href="../index.html" class="position-absolute top-80 start-50 translate-middle-x">Back to Homepage</a>
         </div>
     </div>
   </body>
