--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
           <br>Email contact
           <br><a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a>
           <br>Contact number
-          <br><a href="tel:+4795205161" class="call-us"><i class="fa-solid fa-phone"></i> +47 95 20 51 61</a>
+          <br>TBA</a>
           <br>Our addresses
         </span>
       </div>
