--- a/about.html
+++ b/about.html
@@ -47,20 +47,34 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html" title="About REDSKY Work">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
+              <a class="nav-link" href="about.html" title="About REDSKY"
+                >About REDSKY</a
+              >
             </li>
-            <li class="nav-item">
+             <li class="nav-item">
               <a class="nav-link" href="mats.html" title="About Mats"
-                >About Mats</a>
+                >About Mats</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
+              <a
+                class="nav-link"
+                href="contact.html"
+                title="About Contact Information"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
