--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <title>REDSKY</title>
   </head>
   <body class="homepage">
-    <nav class="navbar navbar-expand-lg" style="background-color: #000000">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button
