construct html, css, js

--- a/projects.html
+++ b/projects.html
@@ -186,7 +186,7 @@
           />
           <h3 class="text-center mb-3">The Last Man In Laos</h3>
           <button type="button" class="btn btn-secondary btn-sm">
-            Read more
+            <a href="lollipop.html" target="_blank">Read more</a>
           </button>
         </div>
       </div>
@@ -222,7 +222,7 @@
           />
           <h3 class="text-center mb-3">LOLLIPOP</h3>
           <button type="button" class="btn btn-secondary btn-sm">
-            Read more
+            <a href="lollipop.html" target="_blank">Read more</a>
           </button>
         </div>
       </div>
