--- a/lollipop.html
+++ b/lollipop.html
@@ -67,7 +67,7 @@
         </p>
         <p>
           ▷ Request script:
-          <button class="btn btn-dark btn-lg" data-bs-toggle="modal" data-bs-target="#inquiryModal">
+          <button class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#inquiryModal">
             Inquiry
           </button>
           </p>
