--- a/lollipop.html
+++ b/lollipop.html
@@ -91,6 +91,42 @@
     </div>
   </section>
 
+   <footer>
+      <div class="social-media-section">
+        <div class="d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/redsky.no/"
+            target="_blank"
+            class="bt btn-branding"
+            title="REDSKY Instagram"
+          >
+            <i class="fa-brands fa-2x fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/mats-bj%C3%B8rseth-37667313b/"
+            target="_blank"
+            title="REDSKY LinkedIn"
+          >
+            <i class="fa-brands fa-2x fa-linkedin"></i>
+          </a>
+          <a href="https://x.com/MatsMekker1" target="_blank" title="REDSKY X">
+            <i class="fa-brands fa-2x fa-x-twitter"></i>
+          </a>
+          <a href="" target="_blank" title="REDSKY Facebook">
+            <i class="fa-brands fa-2x fa-facebook-f"></i>
+          </a>
+          <a href="https://www.imdb.com/activity/editprofile/?ref_=up_hd_edt" target="_blank" title="REDSKY Imdb">
+            <i class="fa-brands fa-2x fa-imdb"></i>
+          </a>
+        </div>
+        <div class="d-flex justify-content-center">
+            <span class="text-center">
+            Redsky 2025 © All rights reserved
+          </span>
+        </div>
+      </div>
+    </footer>
+
   <!-- Inquiry Modal -->
   <div class="modal fade" id="inquiryModal" tabindex="-1" aria-labelledby="inquiryModalLabel" aria-hidden="true">
     <div class="modal-dialog">
